<resources>
    <string name="app_name" translatable="false">SofaProject</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide_data">Hide data</string>
    <string name="action_show_data">Show data</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="change_text">Change text</string>
    <string name="previous">Previous</string>

    <string name="hello_text">Hello SofaScore Academy</string>
    <string name="hello_text2">Welcome to\nSofaScore Academy</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Add</string>
    <string name="tab_text_2">Fighters</string>

    <!--fragment_new_contact-->
    <string name="new_fighter_title">Add a new fighter</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="nickname_hint">Nickname</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (cm)</string>
    <string name="reach_hint">Reach (cm)</string>
    <string name="stance_hint">Stance</string>
    <string name="win_hint">Num. of wins</string>
    <string name="lose_hint">Num. of losses</string>
    <string name="draw_hint">Num. of draws</string>
    <string name="fab_add_person_desc">Add a new person</string>

    <string name="missing_field_validation">This field is required!</string>
    <string name="wrong_input_validation"> value is invalid, min numb</string>
    <string name="min_number_characters_validation">Min number of characters: </string>
    <string name="max_number_characters_validation">Max number of characters: </string>
    <string name="min_value__validation">Min value: </string>
    <string name="max_value_validation">Max value: </string>
    <string name="add_fighter_success">Fighter successfully added!</string>
    <string name="add_fighter_error">Validation error!</string>
    <string name="validation_exception">Num of charaters and int value parameters can not be less then 0!</string>

    <string name="view_fighters_title">Fighters</string>
    <string name="name_label">Name: </string>
    <string name="nickname_label">Nickname:</string>
    <string name="weight_label">Weight (kg):</string>
    <string name="height_label">Height (cm):</string>
    <string name="reach_label">Reach (cm):</string>
    <string name="stance_label">Stance:</string>
    <string name="fighting_style_label">Fighting style:</string>
    <string name="win_draw_lose_label">Win-Draw-Lose:</string>
    <string name="coach_speciality_label">Coach speciality:</string>

    <string-array name="stances">
        <item> Orthodox</item>
        <item> Southpaw</item>
        <item> Switch</item>
    </string-array>

    <string-array name="fighting_style_arr">
        <item>Striker</item>
        <item>Grappler</item>
        <item>All rounder</item>
    </string-array>

    <string name="rb_striker">Striker</string>
    <string name="rb_grappler">Grappler</string>
    <string name="rb_all_rounder">All rounder</string>

    <string name="fighter_img_desc">Fighter kick image</string>
    <string name="fighting_style">Style of fighting</string>
    <string name="fighter_name">%1$s %2$s</string>
    <string name="fighter_score">%1$s-%2$s-%3$s</string>
    <string name="fighter_key" translatable="false">fighter_key</string>
    <string name="coach_key" translatable="false">coach_key</string>
    <string name="coach">Coach</string>
    <string name="coach_image">coach image</string>

    <string name="settings_title">Settings</string>


    <!-- Preferences  -->
    <string name="language_pref_title">App language</string>
    <string name="language_pref_key" translatable="false">language_pref</string>
    <string name="localization">Localization</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_pref_key" translatable="false">dark_theme_pref</string>

    <string name="shared_pref_name" translatable="false">pref</string>
    <string name="shared_pref_dark_mode" translatable="false">dark_mode</string>
    <string name="add">add</string>

    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>
</resources>