<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_new_fighter">

    <fragment
        android:id="@+id/navigation_new_fighter"
        android:name="sofascore.academy.sofaproject.ui.main.NewFighterFragment"
        android:label="@string/new_fighter_title"
        tools:layout="@layout/fragment_new_fighter" />

    <fragment
        android:id="@+id/navigation_view_fighters"
        android:name="sofascore.academy.sofaproject.ui.main.ViewFightersFragment"
        android:label="@string/view_fighters_title"
        tools:layout="@layout/fragment_view_fighters" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="sofascore.academy.sofaproject.ui.main.SettingsFragment"
        android:label="@string/settings_title" />

</navigation>