<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.NewFighterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Theme.SofaProject.Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/new_fighter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/fighter_img_desc"
            android:src="@drawable/kickboxer_silhouette"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:theme="@style/Theme.SofaProject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:id="@+id/newFighterLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_form_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollview_padding_bottom">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/first_name_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/lastName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:hint="@string/last_name_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/nickname" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nickname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/nickname_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/height" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/height_hint"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@id/weight" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/weight_hint"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:nextFocusDown="@id/reach" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reach"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/reach_hint"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:nextFocusDown="@id/stance" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/stanceTL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stance_hint"
                    app:boxBackgroundColor="@android:color/transparent">

                    <AutoCompleteTextView
                        android:id="@+id/stance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:labelFor="@+id/stance"
                        android:nextFocusDown="@id/win" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/fighting_style"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupFightingStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checkedButton="@id/rb_striker">

                        <RadioButton
                            android:id="@+id/rb_striker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/blue"
                            android:text="@string/rb_striker"
                            app:useMaterialThemeColors="true" />

                        <RadioButton
                            android:id="@+id/rb_grappler"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/blue"
                            android:text="@string/rb_grappler" />

                        <RadioButton
                            android:id="@+id/rb_allrounder"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:buttonTint="@color/blue"
                            android:text="@string/rb_all_rounder" />
                    </RadioGroup>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/win"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/win_hint"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@id/lose" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lose"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lose_hint"
                        android:inputType="number"
                        android:nextFocusDown="@id/draw" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/draw"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/draw_hint"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/fab_add_person_desc"
        android:elevation="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>