<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_coach_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/coach_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:text="@string/coach"
            android:textColor="@color/blue"
            android:theme="@style/Theme.SofaProject.FighterTextLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coach_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/name_label"
            android:theme="@style/Theme.SofaProject.FighterTextLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coach_label" />

        <TextView
            android:id="@+id/coach_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_small"
            android:theme="@style/Theme.SofaProject.FighterTextMediumEmphasized"
            app:layout_constraintBottom_toBottomOf="@+id/coach_name_label"
            app:layout_constraintStart_toEndOf="@+id/coach_name_label"
            app:layout_constraintTop_toTopOf="@+id/coach_name_label"
            tools:text="Ime i prezime" />

        <TextView
            android:id="@+id/coach_speciality_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:text="@string/coach_speciality_label"
            android:theme="@style/Theme.SofaProject.FighterTextLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coach_name_label" />

        <TextView
            android:id="@+id/coach_speciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_small"
            android:theme="@style/Theme.SofaProject.FighterTextMediumEmphasized"
            app:layout_constraintBottom_toBottomOf="@+id/coach_speciality_label"
            app:layout_constraintStart_toEndOf="@+id/coach_speciality_label"
            app:layout_constraintTop_toTopOf="@+id/coach_speciality_label"
            tools:text="Ime i prezime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>